objects/ccrz__E_PriceGroupPricelist__c.object
<CustomObject>
    <description>Junction between Price group and Pricelist</description>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <defaultValue>DATETIMEVALUE(&apos;2099-12-31&apos;)</defaultValue>
        <description>Date and Time at which this entry is expires</description>
        <inlineHelpText>Date and Time at which this entry is expires</inlineHelpText>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and Time at which this entry is takes effect</description>
        <inlineHelpText>Date and Time at which this entry is takes effect</inlineHelpText>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the entry is available.</description>
        <inlineHelpText>Determines if the entry is available.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PriceGroupPricelistID__c</fullName>
        <description>External ID field</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field</inlineHelpText>
        <label>Price Group Pricelist ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__PriceGroup__c</fullName>
        <description>Mapping to the price group for this entry.</description>
        <inlineHelpText>Mapping to the price group for this entry.</inlineHelpText>
        <label>CC Price Group</label>
        <referenceTo>ccrz__E_PriceGroup__c</referenceTo>
        <relationshipLabel>CC Price Group Pricelists</relationshipLabel>
        <relationshipName>PriceGroupPricelists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Pricelist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mapping to the price list for this entry.</description>
        <inlineHelpText>Mapping to the price list for this entry.</inlineHelpText>
        <label>CC Price List</label>
        <referenceTo>ccrz__E_PriceList__c</referenceTo>
        <relationshipLabel>CC Price Group Pricelists</relationshipLabel>
        <relationshipName>PriceGroupPricelists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Ordering of the pricelists in a price group</description>
        <inlineHelpText>Ordering of the pricelists in a price group</inlineHelpText>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Storefront to which this association applies.</description>
        <inlineHelpText>Storefront to which this association applies.</inlineHelpText>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Price Group Pricelist</label>
    <nameField>
        <displayFormat>PGP-{0000000000}</displayFormat>
        <label>CC Price Group Pricelist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Group Pricelists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>